--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 825397930369482795
 textchannel = 825397930369482794
 ladderchannel = 
 jungsanchannel = 
